Fix sidebar on mobile

--- a/frontend/src/Components/Page/Header/PageHeader.css
+++ b/frontend/src/Components/Page/Header/PageHeader.css
@@ -1,4 +1,5 @@
 .header {
+  z-index: 2;
   display: flex;
   align-items: center;
   flex: 0 0 auto;
