--- a/frontend/src/Components/Page/PageContentBody.css
+++ b/frontend/src/Components/Page/PageContentBody.css
@@ -8,6 +8,6 @@
 
 @media only screen and (max-device-width: $breakpointSmall) {
   .contentBody {
-    overflow-y: hidden;
+    overflow-y: hidden !important;
   }
 }
