--- a/frontend/src/Components/Page/Sidebar/PageSidebar.css
+++ b/frontend/src/Components/Page/Sidebar/PageSidebar.css
@@ -1,18 +1,31 @@
-.sidebar {
+.sidebarContainer {
   flex: 0 0 $sidebarWidth;
-  overflow-y: auto;
+  overflow: hidden;
   width: $sidebarWidth;
   background-color: $sidebarBackgroundColor;
-  color: $white;
-
   transition: transform 0.3s ease-in-out;
   transform: translateX(0);
 }
 
+.sidebar {
+  overflow-y: auto;
+  width: 100%;
+  height: 100%;
+  background-color: $sidebarBackgroundColor;
+  color: $white;
+}
+
 @media only screen and (max-device-width: $breakpointSmall) {
-  .sidebar {
-    position: absolute;
+  .sidebarContainer {
+    position: fixed;
     top: 0;
+    bottom: 0;
+    z-index: 1;
+  }
+
+  .sidebar {
+    position: fixed;
+    top: 60px;
     bottom: 0;
     z-index: 1;
   }
